prost-unwrap-proto-tests/tests/ui/from_source_invalid_ident.stderr
error: Parameter argument must be a module path literal, e.g. `root::submodule`
 --> tests/ui/from_source_invalid_ident.rs:6:9
  |
6 |         "root",
  |         ^^^^^^
